      the previous click to prevent false double click detection.
    * [131327] Toplevel-window mouse propgation for with WA_MacNoClickThrough.
    * Now entirely QuickDraw clean.
    * [155540] Asymetic scales work with cosmetic pens.

Qtopia Core
-----------

    * Better support for compiling a LSB (Linux Standard Base) compliant Qtopia Core library.

****************************************************************************
*                   Significant Documentation Changes                      *
****************************************************************************

Examples
--------

****************************************************************************
*                          Tools                                           *
****************************************************************************

- Build System
  * Shadowbuilds are now supported by bmake/nmake/mingw-make of Qt
     buildsystem.
  * [151184] Separate -make options for demos and examples
  * [150610] fvisibility requires gcc on Unix builds.
  * [77152] At "make install" time all meta information files will be
    cleaned up to remove reference to source code path.
  * [139399] Use environment CC/CXX on Unix when running the build tests.
  * [145344] "make confclean" will remove all configure generated files as well.
  * [145659] Added ability to disable SSE.
  * Added dwarf2 detection and support into Qt build system for improved
    debug library size. 
  * Added macx-g++-64 meta spec for Qt configure purposes.
  * [127840] Our pkgconfig files (.pc) are placed into lib/pkgconfig now.
  * [135547] Allow Windows line endings on UNIX and vice versa in
    .qt-license files.
  * [133068] GIF support is enabled by default now.

- Assistant

- Designer
    * [151376] Context menu added to the tab order editor
    * [39163] Tab Order Editor - Ctrl + LMB makes it possible to start ordering from selected widget
    * [159129] Fixed Tab Order Editor crash